dataset1235/2025-2/610742602/users/4180041627/executions/677928262_1927446959.log
== RUN (2025-08-28 02:17:21)
-- CODE: 
N= float(input("insira o numero"))

o= N* (27/100)
k=N+N*(42/100)
l= N-N (63/100)

print(round(o,2))
print(round(k,2))
print(round(l,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    l= N-N (63/100)
         ^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    l= N-N (63/100)
         ^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    l= N-N (63/100)
         ^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    l= N-N (63/100)
         ^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    l= N-N (63/100)
         ^^^^^^^^^^
TypeError: 'float' object is not callable
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    l= N-N (63/100)
         ^^^^^^^^^^
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 02:18:55)
-- CODE: 
N= float(input("insira o numero"))

o= N* (27/100)
k=N+N*(42/100)
l= N-N* (63/100)

print(round(o,2))
print(round(k,2))
print(round(l,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 02:16:25)
-- CODE: 
N= float(input("insira o numero"))

o= n* (27/100)
k=n+n*(42/100)
l= n-n (63/100)

print(round(o,2))
print(round(k,2))
print(round(l,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    o= n* (27/100)
       ^
NameError: name 'n' is not defined. Did you mean: 'N'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    o= n* (27/100)
       ^
NameError: name 'n' is not defined. Did you mean: 'N'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    o= n* (27/100)
       ^
NameError: name 'n' is not defined. Did you mean: 'N'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    o= n* (27/100)
       ^
NameError: name 'n' is not defined. Did you mean: 'N'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    o= n* (27/100)
       ^
NameError: name 'n' is not defined. Did you mean: 'N'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    o= n* (27/100)
       ^
NameError: name 'n' is not defined. Did you mean: 'N'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 02:18:38)
-- CODE: 
N= float(input("insira o numero"))

o= N* (27/100)
k=N+N*(42/100)
l= N-N* (63/100)

print(round(o,2))
print(round(k,2))
print(round(l,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
